@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "1.0.19"
+  VERSION = "1.0.20"
 end
